css/main.css
/* HTML tag's should go here */
html {
  font-family: Helvetica, sans-serif;
}
body {
  margin: 0;
  background: url(../images/background.png);
}
form {
    display: inline-block;
    margin: 1em;
}

/* Classes should go here */
.heading {
	position: fixed;
  	right: 0;
  	left: 0;
  	max-height: 340px;
}
.heading-content {
    width: 100%;
    position: fixed;
    display: inline-block;
    top: 0px;
    padding-top: 10px;
    height: 100px;
  	/*background: #DFDFDF;*/
}

.header-grad {
  background: -webkit-linear-gradient(rgba(129,129,129,1), rgba(0,0,0,0)); /* For Safari 5.1 to 6.0 */
  background: -o-linear-gradient(rgba(129,129,129,1), rgba(0,0,0,0)); /* For Opera 11.1 to 12.0 */
  background: -moz-linear-gradient(rgba(129,129,129,1), rgba(0,0,0,0)); /* For Firefox 3.6 to 15 */
  background: linear-gradient(rgba(129,129,129,1), rgba(0,0,0,0)); /* Standard syntax */
}
@media (min-width: 768px) {
    .content {
        width: 740px;
        background: #F0F0F0;
        border: 1px solid #CCC;
        margin: 100px auto;
        border-radius: 4px;
    }
}
@media (min-width: 500px) {
    .content {
        width: 460px;
        background: #F0F0F0;
        border: 1px solid #CCC;
        margin: 100px auto;
        border-radius: 4px;
    }
}
.content {
    width:960px;
    background: #F0F0F0;
    border: 1px solid #CCC;
    margin: 100px auto;
    border-radius: 4px;
}
.login-box {
    height: 24px;
}

.center-block {
  	display: block;
  	margin-right: auto;
	margin-left: auto;
	margin-top: 150px;
}
.search {
    padding-left: 20px;
    display: inline;
}
.search-box {
    width: 75%;
    height: 20px;
}
.login {
    display: inline;
}
@media (min-width: 1070px) {
    .login {
    display: block;
    }
}

.sidebar {
    width: 20%;
    vertical-align: top;
    padding-top: 20px;
}
.sidebar-content {
    list-style-type: none;
    line-height: 23px;
}
.pull-right {
    float: right !important;
}
.pull-left {
    float: left !important;
}
.hide {
    display: none !important;
}
.show {
    display: block !important;
}
.invisible {
    visibility: hidden;
}
.button {
  	display: inline-block;
  	padding: 6px 12px;
  	margin-bottom: 0;
  	line-height: 1.42857143;
  	text-align: center;
  	white-space: nowrap;
  	vertical-align: middle;
	background-image: none;
  	border: 1px solid transparent;
 	border-radius: 4px;
}

.prod-display {
	background-color: #fffbcc;
	border: outset #2A7E6B 10px;
	padding: 20px;
	margin-bottom: 15px;
    padding: 25px;
}
.prod-image {
    width: 33%;
}
.prod-header {
    width: 66%;
    height: 30px;
    vertical-align: top;
}
.prod-content {
    width: 66%;
    vertical-align: top;
}

/* ID's should go here */
#search {
    background: url(../images/icons/glyphicons_027_search.png) no-repeat center;
    height: 24px;
    text-indent: -9999px;
    width: 24px;
}
#login {
    background: url(../images/icons/glyphicons_151_new_window.png) no-repeat center;
    height: 24px;
    text-indent: -9999px;
    width: 24px;
}
#logo {
    background: url(../images/logo.png) no-repeat center;
    float: left;
    height: 100px;
    text-indent: -9999px;
    width: 389px;
    margin-top: -20px;
}
#basket {
    background: url(../images/icons/glyphicons_209_cart_in.png) no-repeat center;
    height: 24px;
    text-indent: -9999px;
    width: 24px;
}

